# Amma

./: .env.example  .gitignore  eslintrc.cjs  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: attendance.rs  employee.rs  mod.rs  print.rs
src-tauri/src/database/: connection.rs
src-tauri/src/models/: attendance.rs  employee.rs  mod.rs
src/components/attendance/: AttendanceCalendar.tsx  AttendanceForm.tsx  AttendanceGrid.tsx  LeaveManagement.tsx
src/components/common/: DateInput.tsx  ErrorBoundary.tsx  NICInput.tsx  PrintButton.tsx
src/components/employee/: EmployeeDetails.tsx  EmployeeFilters.tsx  EmployeeForm.tsx  EmployeeList.tsx  ImageCropper.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/ui/: button.tsx  calendar.tsx  card.tsx  dialog.tsx  index.ts  input.tsx  label.tsx  select.tsx  table.tsx  tabs.tsx
src/hooks/: useAttendance.ts  useEmployees.ts  useImageCrop.ts
src/lib/: api.ts  constants.ts  dateUtils.ts  nicConverter.ts  utils.ts
src/pages/: AddEmployee.tsx  Attendance.tsx  Dashboard.tsx  Employees.tsx
src/store/: attendanceStore.ts  employeeStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: attendance.ts  common.ts  employee.ts
