[package]
name = "employee-management-system"
version = "1.0.0"
description = "A modern employee management system built with Tauri"
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/employee-management-system"
default-run = "employee-management-system"
edition = "2021"
rust-version = "1.60"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-rename-file", "fs-write-file", "http-all", "notification-all", "path-all", "shell-open"] }
mongodb = { version = "2.7.0", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
wkhtmltopdf = "0.4" # Changed from "0.5" to "0.4"
csv = "1.3"
image = "0.24"
base64 = "0.21"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
